--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "sas": "^3.0.4",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
